Add styling to cell element

--- a/style.css
+++ b/style.css
@@ -32,5 +32,10 @@ h1 {
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  font-size: 6em;
+  text-align: center;
 }
