--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ body {
 
 .restart-btn {
   position: absolute;
-  bottom: 0;     /* Aligns the div to the bottom of the containing element */
-  right: 0;       /* Aligns the div to the left side of the containing element */
-  width: 50pxpx;  /* Example width */
-  height: 24px; /* Example height */
-  background-color: #43115B; /* Background color for visual reference */
+  bottom: 0; 
+  right: 0;
+  width: 50pxpx;
+  height: 24px; 
+  background-color: #43115B; 
 }
 
 .body {
@@ -27,7 +27,9 @@ body {
   width: 95%;
   height: 100vh;
   border-radius: 30px;
-}
+  position: relative;
+  overflow: hidden;
+
 
 .game-board {
   display: grid;
@@ -43,8 +45,24 @@ body {
   border: 2px solid black;
 }
 
-h1 {
-  text-align: center;
+.game-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  font-size: 121px;
+  font-weight: 400;
+  line-height: .6;
+  transform: translateX(-13px);
+}
+
+.yellow-txt {
+  color: #DCBF3F;
+}
+
+.blue-txt {
+  color: #72CFF9;
 }
 
 .cell {
