--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body {
 .inner-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 .scores-section {
@@ -53,12 +55,13 @@ body {
   font-family: "Fredoka", sans-serif;
   font-weight: 500;
   font-size: smaller;
+  margin-bottom: 20px;
 }
 
 .scores-section > div {
-  width: 80px;
-  height: 80px;
-  border-radius: 6%;
+  width: 75px;
+  height: 75px;
+  border-radius: 10%;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -92,16 +95,19 @@ body {
 .game-board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  width: 300px;
-  height: 300px;
-  border: 2px solid black;
+  gap: 18px;
 }
 
 
 .game-board > div {
-  width: 100px;
-  height: 100px;
-  border: 2px solid black;
+  width: 75px;
+  height: 75px;
+  background-color: #43115b;
+  border-radius: 10%;
+}
+
+.game-board > div:hover {
+  background-color: #5A1E76;
 }
 
 .game-title {
