--- a/style.css
+++ b/style.css
@@ -142,6 +142,6 @@ body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  font-size: 6em;
+  font-size: 50px;
   text-align: center;
 }
