--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body {
   background-color: #2B0040;
   padding: 50px;
   border-radius: 30px;
+  z-index: 2;
+  opacity: 0.8;
 }
 
 .inner-container {
@@ -127,6 +129,7 @@ body {
   font-weight: 400;
   line-height: .6;
   transform: translateX(-13px);
+  z-index: 1;
 }
 
 .yellow-txt {
