--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
 }
 
 .win-indicator {
-  background-color: green;
+  background-color: rgb(36, 151, 36);
   display: none;
 }
 
@@ -175,4 +175,17 @@ body {
   cursor: pointer;
   font-size: 50px;
   text-align: center;
+}
+
+.restart-btn {
+  display: block;
+  padding: 10px 20px;
+  padding-bottom: 30px;
+  cursor: pointer;
+  background-color: #E2BE00;
+  border-radius: 6px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1000;
 }
